--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 ## User settings
 xcuserdata/
 
+LlamaChat.xcodeproj/xcshareddata/xcschemes/LlamaChat.xcscheme
+
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
