--- a/LlamaChat/Info.plist
+++ b/LlamaChat/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>SUFeedURL</key>
+	<string>https://llamachat.app/api/appcast.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>kYcF5CTAVZ6ljL01giZNTfMtJCDUl/DUUQ5FsibYCx8=</string>
 </dict>
