move sparkle params into xcconfig

--- a/LlamaChat/Info.plist
+++ b/LlamaChat/Info.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>SUFeedURL</key>
-	<string>https://llamachat.app/api/appcast.xml</string>
+	<string>$(SPARKLE_FEED_URL)</string>
 	<key>SUPublicEDKey</key>
-	<string>kYcF5CTAVZ6ljL01giZNTfMtJCDUl/DUUQ5FsibYCx8=</string>
+	<string>$(SPARKLE_PUBLIC_ED_KEY)</string>
 </dict>
 </plist>
