--- a/LlamaChat/LlamaChat.xcconfig
+++ b/LlamaChat/LlamaChat.xcconfig
@@ -1,2 +1,4 @@
 CURRENT_PROJECT_VERSION = 5
 MARKETING_VERSION = 1.2.0
+SPARKLE_FEED_URL = https:/$()/llamachat.app/api/appcast-prerelease.xml
+SPARKLE_PUBLIC_ED_KEY = kYcF5CTAVZ6ljL01giZNTfMtJCDUl/DUUQ5FsibYCx8=
